--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="dropdown">
             <button class="dropbtn">Details</button>
             <div class="dropdown-content">
-                <a href="pages/about.html"><div class="icon_text"><img src="pages/images/about.png" width="20px" /></div>  About</a>
-                <a href="pages/contacts.html"><div class="icon_text"><img src="pages/images/contacts.png" width="25px" /></div>  Contact</a>
+                <a href="/pages/about.html"><div class="icon_text"><img src="pages/images/about.png" width="20px" /></div>  About</a>
+                <a href="/pages/contacts.html"><div class="icon_text"><img src="pages/images/contacts.png" width="25px" /></div>  Contact</a>
                 <a href="index.html"><div class="icon_text"><img src="pages/images/blog.png" width="22px" /></div>  Blog</a>
             </div>
         </div>
