--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <img src="pages/images/tower.png" alt="" width="60%" /></a>
+                    <img class="post_icon" src="pages/images/tower.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
@@ -65,7 +65,7 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img src="pages/images/tower.png" alt="" width="60%" /></a>
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt=""/></a>
                 </div>
             </div>
             <div class="column right">
@@ -83,7 +83,7 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img src="pages/images/tower.png" alt="" width="60%" /></a>
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
@@ -101,7 +101,7 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img src="pages/images/tower.png" alt="" width="60%" /></a>
+                    <a href="Project1.html"><img class="post_icon"  src="pages/images/tower.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
