--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
     <title>BooyahBay</title>
 
     <!-- Bootstrap CSS -->
@@ -13,6 +13,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
+
 
     <!-- Favicon -->
     <link rel="icon" href="brand_logo.ico" />
@@ -51,8 +52,8 @@
                 
 
 
-                <p style="padding:20% 20% 20% 20%">
-                    For any inquiries, please write at <br /> <strong>narakurakin@gmail.com</strong>
+                <p style="padding:20% 5% 20% 5%">
+                    For any inquiries, please write at <strong>narakurakin@gmail.com</strong>
                 </p>
 
 
