--- a/index.html
+++ b/index.html
@@ -47,17 +47,22 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <img class="post_icon" src="pages/images/tower.png" alt="" width="60%" /></a>
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/binoculars.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
+                
                 <div class="project_description">
-                    <a href="pages/Project Template.html">
-                        <h5><strong><u>Lorem Ipsum</u></strong></h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p id="tools"> Lorem, Ipsum, Dolor</p>
+                    <a href="pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html">
+                        <h5><strong><u>Paleographical tricks with Exiftool and Strings</u></strong></h5>
+                        <p>This post discusses mundane afternoons, document metadata, and Exiftool, a useful paleographical instrument for those who enjoy reading between the lines. I recently picked up one or two new tricks while digging up treasure chests from the deep sands of the internet. After finding all that gold, one could not help but ask who put it there in the first place. </p>
                     </a>
+                        <p class="project_date date"> 27/02/2024</p>
+                        <p id="tools"> Recon, Exiftool, Strings</p>
+
+
                 </div>
+                
             </div>
         </div>
 
