--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -16,7 +16,7 @@
 
 
     <!-- Favicon -->
-    <link rel="icon" href="brand_logo.ico" />
+    <link rel="icon" href="../brand_logo.ico" />
 </head>
 
 <body id="top-of-page" class="container-fluid">
