--- a/pages/about.html
+++ b/pages/about.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 
     <!-- Favicon -->
-    <link rel="icon" href="brand_logo.ico" />
+    <link rel="icon" href="../brand_logo.ico" />
 </head>
 
 <body id="top-of-page" class="container-fluid">
