--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h5><strong><u>Paleographical tricks with Exiftool and Strings</u></strong></h5>
                         <p>This post discusses mundane afternoons, document metadata, and Exiftool, a useful paleographical instrument for those who enjoy reading between the lines. I recently picked up one or two new tricks while digging up treasure chests from the deep sands of the internet. After finding all that gold, one could not help but ask who put it there in the first place. </p>
                     </a>
-                        <p class="project_date date"> 27/02/2024</p>
+                        <p class="project_date date"> March 2nd, 2024</p>
                         <p id="tools"> Recon, Exiftool, Strings</p>
 
 
