--- a/pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html
+++ b/pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html
@@ -75,7 +75,7 @@
                             <a href="#part3">What we are going to use </a>
                         </li>
                         <li>
-                            <a href="#part4">The Indonesian who stole it first </a>
+                            <a href="#part4">The Indonesian thief </a>
                         </li>
                         <li>
                             <a href="#part5">Exiftool to cast wider nets </a>
@@ -173,7 +173,7 @@
                     </li>
                 </ul>
 
-                <h6 class="titleh" id="part4">The Indonesian who stole it first</h6>
+                <h6 class="titleh" id="part4">The Indonesian thief</h6>
                 <hr class="black-line">
                 <p>Exiftool is quite straightforward. For example, let's go back to the hypothetical treasure chest and pick the first thing that comes to hand and let's run the following. </p>
                 <div class="code_content">
