--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/binoculars.png" alt="" width="60%" /></a>
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/treasure-map.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
-                
+
                 <div class="project_description">
                     <a href="pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html">
                         <h5><strong><u>Paleographical tricks with Exiftool and Strings</u></strong></h5>
                         <p>This post discusses mundane afternoons, document metadata, and Exiftool, a useful paleographical instrument for those who enjoy reading between the lines. I recently picked up one or two new tricks while digging up treasure chests from the deep sands of the internet. After finding all that gold, one could not help but ask who put it there in the first place. </p>
                     </a>
-                        <p class="project_date date"> March 2nd, 2024</p>
-                        <p id="tools"> Recon, Exiftool, Strings</p>
+                    <p class="project_date date"> March 2nd, 2024</p>
+                    <p id="tools"> Recon, Exiftool, Strings</p>
 
 
                 </div>
-                
+
             </div>
         </div>
 
@@ -70,7 +70,30 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt=""/></a>
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/telescope.png" alt="" width="60%" /></a>
+                </div>
+            </div>
+            <div class="column right">
+
+                <div class="project_description">
+                    <a href="...">
+                        <h5><strong><u>Long nights in the crow's nest lookout</u></strong></h5>
+                        <p>Reconnaissance means discovering as much as we can about a potential target. Merchant vessels tend to travel slower after dark, due to lower visibility. The cabin boy will be given the responsibility of spending the next few nights in the crow’s nest, at the top of the main mast. Hopefully, he won’t fall asleep this time. </p>
+                    </a><br />
+                    <p class="project_date date"> March 2nd, 2024</p>
+                    <p id="tools"> Recon, Whois, Nslookup, Dig, Recon-ng</p>
+
+
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Project 2 -->
+        <div class="row">
+            <div class="column left">
+                <div class="project_logo">
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt="" /></a>
                 </div>
             </div>
             <div class="column right">
@@ -106,7 +129,7 @@
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon"  src="pages/images/tower.png" alt="" width="60%" /></a>
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt="" width="60%" /></a>
                 </div>
             </div>
             <div class="column right">
