--- a/pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html
+++ b/pages/001/Paleographical_tricks_with_Exiftool_and_Strings.html
@@ -122,7 +122,7 @@
                         <strong>Client-side software in use.</strong> Knowing which tools and programs were used to handle the analyzed files can be cool (e.g., office suite, PDF-generating tool, camera models used to take pictures, etc). Tools and tools versions might indicate vulnerabilities, that goes without saying.
                     </li>
                     <li>
-                        <strong>Other information.</strong> Other useful information about the file (e.g., undo information, previous revisions, hidden collapsed column in a spreadsheet) or who created it (e.g., timestamps, from which we can check the time zone and do some inference on the location).
+                        <strong>Other information.</strong> Other useful information about the file (e.g., undo information, previous revisions, hidden collapsed column in a spreadsheet) or who created it (e.g., timestamps).
                     </li>
                 </ul>
                 <p>
