--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
         </div>
 
-        <!-- Project 2 -->
+        <!-- Project 3 -->
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
@@ -107,48 +107,13 @@
             </div>
         </div>
 
-        <!-- Project 4 -->
-        <div class="row">
-            <div class="column left">
-                <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt="" width="60%" /></a>
-                </div>
-            </div>
-            <div class="column right">
-                <div class="project_description">
-                    <a href="DNS - Infrastructure and Attacks.html">
-                        <h5><strong><u>Lorem Ipsum</u></strong></h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p id="tools"> Lorem, Ipsum, Dolor</p>
-                    </a>
-                </div>
-            </div>
-        </div>
-
-        <!-- Project 5 -->
-        <div class="row">
-            <div class="column left">
-                <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt="" width="60%" /></a>
-                </div>
-            </div>
-            <div class="column right">
-                <div class="project_description">
-                    <a href="DNS - Infrastructure and Attacks.html">
-                        <h5><strong><u>Lorem Ipsum</u></strong></h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p id="tools"> Lorem, Ipsum, Dolor</p>
-                    </a>
-                </div>
-            </div>
-        </div>
 
         <!-- Repeat the above structure for other projects -->
         <!-- Additional Section -->
         <div class="row">
             <div class="no_shadow column">
                 <div class="plain_text">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                    <p>Return my treasures to me, and I myself will carry you through the gates of Valhalla. You shall ride eternal. Shiny, and chrome!</p>
                 </div>
             </div>
         </div>
