--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
                 <div class="project_description">
                     <a href="...">
-                        <h5><strong><u>Long nights in the crow's nest lookout</u></strong></h5>
+                        <h5><strong><u>Long nights in the crow's nest</u></strong></h5>
                         <p>Reconnaissance means discovering as much as we can about a potential target. Merchant vessels tend to travel slower after dark, due to lower visibility. The cabin boy will be given the responsibility of spending the next few nights in the crow’s nest, at the top of the main mast. Hopefully, he won’t fall asleep this time. </p>
                     </a><br />
                     <p class="project_date date"> March 2nd, 2024</p>
