--- a/index.html
+++ b/index.html
@@ -43,7 +43,31 @@
 
     <!-- Main Content -->
     <div class="greyish" style="text-align:center">
-        <!-- Project 1 -->
+
+        <!-- Project -->
+        <div class="row">
+            <div class="column left">
+                <div class="project_logo">
+                    <a href="Project1.html"><img class="post_icon" src="pages/images/telescope.png" alt="" width="60%" /></a>
+                </div>
+            </div>
+            <div class="column right">
+
+                <div class="project_description">
+                    <a href="pages/002/Long_nights_in_the_crows_nest.html">
+                        <h5><strong><u>Long nights in the crow's nest</u></strong></h5>
+                        <p>Reconnaissance means discovering as much as we can about a potential target. Merchant vessels tend to travel slower after dark, due to lower visibility. The cabin boy will be given the responsibility of spending the next few nights in the crow’s nest, at the top of the main mast. Hopefully, he won’t fall asleep this time. </p>
+                    </a><br />
+                    <p class="project_date date"> March 16th, 2024</p>
+                    <p id="tools"> Recon, Whois, Nslookup, Dig, Recon-ng</p>
+
+
+                </div>
+
+            </div>
+        </div>
+
+        <!-- Project -->
         <div class="row">
             <div class="column left">
                 <div class="project_logo">
@@ -66,46 +90,9 @@
             </div>
         </div>
 
-        <!-- Project 2 -->
-        <div class="row">
-            <div class="column left">
-                <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/telescope.png" alt="" width="60%" /></a>
-                </div>
-            </div>
-            <div class="column right">
-
-                <div class="project_description">
-                    <a href="...">
-                        <h5><strong><u>Long nights in the crow's nest</u></strong></h5>
-                        <p>Reconnaissance means discovering as much as we can about a potential target. Merchant vessels tend to travel slower after dark, due to lower visibility. The cabin boy will be given the responsibility of spending the next few nights in the crow’s nest, at the top of the main mast. Hopefully, he won’t fall asleep this time. </p>
-                    </a><br />
-                    <p class="project_date date"> March 2nd, 2024</p>
-                    <p id="tools"> Recon, Whois, Nslookup, Dig, Recon-ng</p>
 
 
-                </div>
 
-            </div>
-        </div>
-
-        <!-- Project 3 -->
-        <div class="row">
-            <div class="column left">
-                <div class="project_logo">
-                    <a href="Project1.html"><img class="post_icon" src="pages/images/tower.png" alt="" /></a>
-                </div>
-            </div>
-            <div class="column right">
-                <div class="project_description">
-                    <a href="DNS - Infrastructure and Attacks.html">
-                        <h5><strong><u>Lorem Ipsum</u></strong></h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                        <p id="tools"> Lorem, Ipsum, Dolor</p>
-                    </a>
-                </div>
-            </div>
-        </div>
 
 
         <!-- Repeat the above structure for other projects -->
