--- a/pages/002/Long_nights_in_the_crows_nest.html
+++ b/pages/002/Long_nights_in_the_crows_nest.html
@@ -382,7 +382,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/17.png" width="100%">
+                    <img src="images/17.jpg" width="100%">
                 </div><br />
                       <p>
                           <strong>This post ain’t finished yet, but it shall continue as soon as I find some time.</strong>
