--- a/pages/002/Long_nights_in_the_crows_nest.html
+++ b/pages/002/Long_nights_in_the_crows_nest.html
@@ -384,9 +384,12 @@
                 <div class="center">
                     <img src="images/17.jpg" width="100%">
                 </div><br />
-                      <p>
-                          <strong>This post ain’t finished yet, but it shall continue as soon as I find some time.</strong>
-                      </p>
+                <div class="center">
+                    <img src="images/18.PNG" width="100%">
+                </div><br />
+                <p>
+                    <strong>This post ain’t finished yet, but it shall continue as soon as I find some time.</strong>
+                </p>
 
 
 
@@ -408,40 +411,40 @@
 
 
 
-                      <div class="biblio_box">
+                <div class="biblio_box">
 
 
-                          <h5 id="bibliography">👽 Related links 👽</h5>
-                          <p id="note">
-                              If you wanna know more about this stuff, these may be useful resources to begin with.
-                          </p>
-                          <hr class="black-line">
+                    <h5 id="bibliography">👽 Related links 👽</h5>
+                    <p id="note">
+                        If you wanna know more about this stuff, these may be useful resources to begin with.
+                    </p>
+                    <hr class="black-line">
 
-                          <a href="https://www.ietf.org/rfc/rfc1035.txt">
-                              <p>
-                                  <strong>Request for Comments: 1035</strong> <br />DOMAIN NAMES - IMPLEMENTATION AND SPECIFICATION <br />
-                              </p>
-                          </a>
+                    <a href="https://www.ietf.org/rfc/rfc1035.txt">
+                        <p>
+                            <strong>Request for Comments: 1035</strong> <br />DOMAIN NAMES - IMPLEMENTATION AND SPECIFICATION <br />
+                        </p>
+                    </a>
 
-                          <a href="https://linux.die.net/man/1/nslookup">
-                              <p>
-                                  <strong>nslookup</strong> <br />Linux Man Pages
-                                  <br />
-                              </p>
-                          </a>
+                    <a href="https://linux.die.net/man/1/nslookup">
+                        <p>
+                            <strong>nslookup</strong> <br />Linux Man Pages
+                            <br />
+                        </p>
+                    </a>
 
-                          <a href="https://linux.die.net/man/1/dig">
-                              <p>
-                                  <strong>dig</strong> <br />Linux Man Pages
-                                  <br />
-                              </p>
-                          </a>
-
-                          
+                    <a href="https://linux.die.net/man/1/dig">
+                        <p>
+                            <strong>dig</strong> <br />Linux Man Pages
+                            <br />
+                        </p>
+                    </a>
 
 
 
-                      </div>
+
+
+                </div>
 
 
 
