--- a/pages/002/Long_nights_in_the_crows_nest.html
+++ b/pages/002/Long_nights_in_the_crows_nest.html
@@ -172,7 +172,7 @@
                     Now we obtain much more information. If we did the same with some .org domain (i.e., with a thick data model), then we would have found the right information directly in the output of the first query, without need to run whois again on the registrar Whois server.
                 </p>
                 <div class="center">
-                    <img src="images/3.jpg" width="100%">
+                    <img src="images/3.PNG" width="100%">
                 </div><br />
                 <p>
                     Let’s start looking at a simple example: we run whois for the domain <strong>polimi.it</strong>.
@@ -299,7 +299,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/14.png" width="100%">
+                    <img src="images/14.PNG" width="100%">
                 </div><br />
 
                 <p>
