--- a/index.html
+++ b/index.html
@@ -37,12 +37,18 @@
     <!-- Header -->
     <header>
         <div class="title">
-            <img id="BrandLogo" src="pages/images/brand_logo.png" width="15%" />
+            <img id="BrandLogo" src="pages/images/brand_logo.png" width="25%" />
         </div>
     </header>
 
     <!-- Main Content -->
     <div class="greyish" style="text-align:center">
+
+
+        <div class="separator center">
+            <div>🍊 Shorter Posts 🍊</div>
+        </div>
+
 
         <!-- Project -->
         <div class="row">
@@ -93,13 +99,11 @@
 
 
 
-
-
         <!-- Repeat the above structure for other projects -->
         <!-- Additional Section -->
         <div class="row">
             <div class="no_shadow column">
-                <div class="plain_text">
+                <div class="plain_text center">
                     <p>Return my treasures to me, and I myself will carry you through the gates of Valhalla. You shall ride eternal. Shiny, and chrome!</p>
                 </div>
             </div>
