--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -53,7 +53,7 @@
 
 
                 <p style="padding:20% 5% 20% 5%">
-                    For any inquiries, please write at <strong>narakurakin@gmail.com</strong>
+                    For any inquiries, please write at <strong>narakurakin@gmail.com</strong> :D
                 </p>
 
 
