--- a/pages/002/Long_nights_in_the_crows_nest.html
+++ b/pages/002/Long_nights_in_the_crows_nest.html
@@ -398,7 +398,7 @@
                     Another useful tidbit obtained from querying any resource record is to be found in the TXT record about <strong>SPF (Sender Policy Framework)</strong> email authentication protocol. This one:
                 </p>
                 <div class="center">
-                    <img src="images/18.PNG" width="100%">
+                    <img src="images/18.jpg" width="100%">
                 </div><br />
 
                 <p>
