--- a/pages/002/Long_nights_in_the_crows_nest.html
+++ b/pages/002/Long_nights_in_the_crows_nest.html
@@ -443,7 +443,7 @@
                 </div>
                 <br />
                 <div class="center">
-                    <img src="images/19.png" width="100%">
+                    <img src="images/19.PNG" width="100%">
                 </div><br />
 
                 <p>
@@ -469,7 +469,7 @@
                 </div>
                 <br />
                 <div class="center">
-                    <img src="images/20.png" width="80%">
+                    <img src="images/20.PNG" width="80%">
                 </div><br />
 
                 <p>
@@ -484,7 +484,7 @@
                 <br />
 
                 <div class="center">
-                    <img src="images/21.png" width="100%">
+                    <img src="images/21.PNG" width="100%">
                 </div><br />
 
                 <p>
@@ -506,7 +506,7 @@
                 </p>
 
                 <div class="center">
-                    <img src="images/22.png" width="100%">
+                    <img src="images/22.PNG" width="100%">
                 </div><br />
 
                       <p>
