--- a/pages/003/Setting_up_Kali_Linux_in_GNS3.html
+++ b/pages/003/Setting_up_Kali_Linux_in_GNS3.html
@@ -120,7 +120,7 @@
                 </p>
 
                 <div class="center">
-                    <img class="big_image" src="images/1.png">
+                    <img class="big_image" src="images/1.PNG">
                     <p class="pic_description">Picture of Russel Brand from Eric Andre show</p>
                 </div><br />
                 <p>
