--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 			
 			
 					<div class="separator center">
-            <div>🍓 Random Miscellaneous Stuff 🍓</div>
+            <div>🍓 Random Stuff 🍓</div>
         </div>
 		
 		        <!-- Project -->
